# hslib

./: .ec  .sym  CMakeLists.txt  Makefile  hslibConfig.cmake.in
include/: ec.h  hst.h
include/algo/: strh.h
src/: hst.c  strh.c
test/: CMakeLists.txt  hst.c
